# Synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Audio.h  Envelope.h  Filter.h  Keyboard.h  Oscillator.h  Synth.h  Voice.h
include/audio/: Audio.h  Lfo.h  Oscillator.h  Synth.h  Voice.h
include/ui/: Gui.h  Keyboard.h
labs/: Lab3.docx
presets/: bell.preset  bell8.preset  default.preset  harmonica.preset
src/: Audio.cpp  Envelope.cpp  Filter.cpp  Keyboard.cpp  Lfo.cpp  Oscillator.cpp  Synth.cpp  Voice.cpp  main.cpp
src/audio/: Audio.cpp  Envelope.cpp  Filter.cpp  Lfo.cpp  Oscillator.cpp  Synth.cpp  Voice.cpp
src/ui/: Gui.cpp  Keyboard.cpp
tests/: CMakeLists.txt  main.cpp
